Set content background to darker grey

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1 style="padding-right: 20%">whatIsIt?</h1>
                 <p>This is my webpage. It's really for myself: to build on as my coding improves and to showcase new skills as I learn them. It's fun putting things like this together, but it gives you an idea of my current level too. You must be curious or you wouldn't be here, right? &hearts;</p>
                 <h1 style="padding-left: 20%">why.</h1>
-                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough to throw myself into the ocean. Admittedly I am terrified, but I think that's part of the fun.</p>
+                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough and throw myself into the water. Admittedly I am terrified, but I think that's part of the fun.</p>
                 <br/><br/><br/><br/><br/><br/>
             </div>
             <i class="fas fa-info fa-6x icon aboutMeIcon" onClick="applyIconClickAnimation('#aboutMe')"></i>
@@ -70,11 +70,11 @@
                     <ul>
                         <li>English</li>
                         <li>Tagalog (Filipino)</li>
-                        <li>German - basic (progressing)</li>
+                        <li style="list-style-type: circle">German - basic (progressing)</li>
                     </ul>
                 </p>
                 <h1>certificates.</h1>
-                <p>freeCodeCamp
+                <p>Tech
                     <ul>
                         <li>Responsive Web Design, 300hrs</li>
                         <li style="list-style-type: circle">JavaScript Algorithms and Data Structures, 300hrs (progressing)</li>
@@ -100,7 +100,7 @@
         <section id="background">
                 <div class="textContent">
                     <h1>background.</h1>   
-                    <p>Who doesn't want to spend their childhood in the countryside? Discovering a world with animals, forests, lakes, and so many fields to run through it would make Theresa May jealous. Although, growing up as a queer POC in a little old English village did come with it's fair share of challenges. I was forced to think outside the box from an early age and it's because of this that I've always loved to create. Sculptures, stories, songs, poetry, games... I was definitely one of those kids who could only give elaborate answers to simple questions.</p>
+                    <p>Who doesn't want to spend their childhood in the countryside, <i>right?</i> Discovering an idyllic world with forest, lakes, animals, and so many fields to run through it would make Theresa May jealous. Although, growing up as a queer POC in an old English village did come with its fair share of challenges. I was forced to think outside the box from an early age and this is where I learned my love for creating. Sculptures, stories, songs, poetry, games... I was definitely one of those kids who could only give elaborate answers to simple questions. <sup>I also wanted to grow up to be a train.</sup></p>
                     <h1 style="padding-left: 20%;">goals.</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <h1 style="padding-right: 20%;">aspirations.</h1>
