--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
     <footer>
         <div class="footerLine" id="footer"></div>
         <div class="footerContent">
-            <i class="fas fa-envelope fa-2x icon mailIcon"></i>
-            <i class="fab fa-linkedin-in fa-2x icon linkedinIcon"></i>
-            <i class="fab fa-twitter fa-2x icon twitterIcon"></i>
-            <i class="fab fa-github fa-2x icon githubIcon"></i>
-            <i class="fab fa-galactic-republic fa-2x icon codewarsIcon"></i>
+            <div class="footerIconContainer"><a href="mailto:c92macleod@gmail.com?subject=Hi%20tiarama,%20I%20want%20to%20get%20in%20touch!"><i class="fas fa-envelope fa-2x icon mailIcon"></i></a></div>
+            <div class="footerIconContainer"><a href="https://www.linkedin.com/in/craig-macleod-1a2a091b8/" target="_blank"><i class="fab fa-linkedin-in fa-2x icon linkedinIcon"></i></a></div>
+            <div class="footerIconContainer"><i class="fab fa-twitter fa-2x icon twitterIcon"></i></div>
+            <div class="footerIconContainer"><a href="https://github.com/Tiarama" target="_blank"><i class="fab fa-github fa-2x icon githubIcon"></i></a></div>
+            <div class="footerIconContainer"><a href="https://www.codewars.com/users/Tiarama" target="_blank"><i class="fab fa-galactic-republic fa-2x icon codewarsIcon"></i></a></div>
         </div>
     </footer>
     <script src="script.js"></script>
