added freeCodeCamp icon & hyperlink

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p><strong>Tiarama</strong>, that's what I call myself online. It's always been fun to play with an alter ego. I mean... <strong>Craig MacLeod</strong> is such a masculine Scottish name isn't it? <i>Fair enough</i> I am half Scottish and I do enjoy a deep fried mars bar as much as the next person (<i>who doesn't?</i>), but I'm also half Filipino and really not that masculine.</p>
                 <h1 style="padding-right: 20%">whatIsIt?</h1>
                 <p>This is my webpage. It's really for myself: to build on as my coding improves and to showcase new skills as I learn them. It's fun putting things like this together, but it gives you an idea of my current level too. You must be curious or you wouldn't be here, right? &hearts;</p>
-                <h1 style="padding-left: 20%">why.</h1>
+                <h1 style="padding-left: 20%">why?</h1>
                 <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough to throw myself into the water. Admittedly I am terrified, but I think that's part of the fun.</p>
                 <br/><br/><br/><br/><br/><br/>
             </div>
@@ -88,6 +88,7 @@
                         <li>Senior Management & Coaching Essentials, 72hrs</li>
                     </ul>
                 </p>
+                <h1>passions.</h1>
                 <br/><br/><br/><br/><br/><br/>
             </div> 
                 <i class="fas fa-paint-brush fa-5x icon skillsIcon" onClick="applyIconClickAnimation('#skills')"></i>
@@ -123,7 +124,7 @@
         <div class="footerContent">
             <div class="footerIconContainer"><a href="mailto:c92macleod@gmail.com?subject=Hi%20tiarama,%20I%20want%20to%20get%20in%20touch!"><i class="fas fa-envelope fa-2x icon mailIcon"></i></a></div>
             <div class="footerIconContainer"><a href="https://www.linkedin.com/in/craig-macleod-1a2a091b8/" target="_blank"><i class="fab fa-linkedin-in fa-2x icon linkedinIcon"></i></a></div>
-            <div class="footerIconContainer"><i class="fab fa-twitter fa-2x icon twitterIcon"></i></div>
+            <div class="footerIconContainer"><a href="https://www.freecodecamp.org/tiarama" target="_blank"><i class="fab fa-free-code-camp fa-2x icon freecodecampIcon"></i></a></div>
             <div class="footerIconContainer"><a href="https://github.com/Tiarama" target="_blank"><i class="fab fa-github fa-2x icon githubIcon"></i></a></div>
             <div class="footerIconContainer"><a href="https://www.codewars.com/users/Tiarama" target="_blank"><i class="fab fa-galactic-republic fa-2x icon codewarsIcon"></i></a></div>
         </div>
