--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                         <li>English</li>
                         <li>Tagalog (Filipino)</li>
                         <li style="list-style-type: circle">German - basic (progressing)</li>
+                        <li style="list-style-type: circle"><del>Dothraki</del></li>
                     </ul>
                 </p>
                 <h1>certificates.</h1>
