Added landing page orbs (unanimated) and adjusted scroll button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 <body>
     <!-- Hero -->
     <header class="header">
-        <div class="headerBG"></div>
+        <!-- Floating Orbs -->
+        <div class="orbPage">
+            <div class="orbParent">
+                <div class="orbBG" id="orbBGLeft">
+                    <div class="orbBorder" id="orbBorderLeft">
+                        <div class="orb" id="orbLeft"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="orbParent">
+                <div class="orbBG" id="orbBGMiddle">
+                    <div class="orbBorder" id="orbBorderMiddle">
+                        <div class="orb" id="orbMiddle"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="orbParent">
+                <div class="orbBG" id="orbBGRight">
+                    <div class="orbBorder" id="orbBorderRight">
+                        <div class="orb" id="orbRight"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Tiarama logo -->
         <div class="logo">
             <div class="logoLetter"><img style="height: 200%; left: -20%;" src="images/logoImages/logoT.svg" alt="T"></div>
