changed cursor over certain elements, added image hovers for Passions section, fixed icon animation to display none after 2s

--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
                     </ul>
                 </p>
                 <h1>passions.</h1>
+                <p>
+                    <ul style="list-style-type: none; text-align: center; padding-right: 10%;">
+                        <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Interior design *</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Art *</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Something *</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Skiing *</li>
+                    </ul>
+                </p>
                 <br/><br/>
             </div> 
                 <i class="fas fa-paint-brush fa-5x icon skillsIcon" onClick="applyIconClickAnimation('#skills')"></i>
