Updated all text content

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <section id="aboutMe">
             <div class="textContent">
                 <h1>whoAmI?</h1>   
-                <p><strong>Tiarama</strong>, that's what I call myself online. It's always been fun to play with an alter ego. I mean... <strong>Craig MacLeod</strong> is such a masculine Scottish name isn't it? <i>Fair enough</i> I am half Scottish and I do enjoy a deep fried mars bar as much as the next person (<i>who doesn't?</i>), but I'm also half Filipino and really not that masculine.</p>
+                <p><strong>Tiarama</strong> is what I call myself online. It's always been fun to play with an alter ego. I mean... <strong>Craig MacLeod</strong> is such a masculine Scottish name isn't it? <i>Fair enough</i> I am half Scottish and I do enjoy a deep fried mars bar as much as the next person (<i>who doesn't?</i>), but I'm also half Filipino and really not that masculine.</p>
                 <h1 style="padding-right: 20%">whatIsIt?</h1>
-                <p>This is my webpage. It's really for myself: to build on as my coding improves and to showcase new skills as I learn them. It's fun putting things like this together, but it gives you an idea of my current level too. You must be curious or you wouldn't be here, right? &hearts;</p>
-                <h1 style="padding-left: 20%">why?</h1>
-                <p>Everybody, <i><sup style="font-size:90%">not forgetting you</sup></i>, has been through times where we've needed to make big, scary changes to our lives. <strong>This is one of those times for me</strong>. The tech universe has always provoked a fascination and an excitement to learn in myself, so I decided I would finally be brave enough to throw myself into the water. Admittedly I am terrified, but I think that's part of the fun.</p>
+                <p>I created this webpage to apply for <a href="https://www.foundersandcoders.com/" target="_blank">Founders And Coders</a> 2021 Spring Cohort in London, but it's also for myself: to build on as my coding improves and to showcase new skills as I learn them.  It's fun putting things like this together and gives anyone interested an idea of my current level too. You must be curious or you wouldn't be here, right? &hearts;</p>
+                <h1 style="padding-left: 20%">whyMe?</h1>
+                <p>Everybody goes through tough times where we need to make big, scary changes to our lives and it's terrifying! ...but to my advantage I have been here already. My life experience had me homeless when I was 16, illness then caused me to leave university without a degree in my 20s, and I was left starting over from zero both times. I'm not complaining though; it's also given me the drive, dedication and empathy that I consider to be my strongest qualities. I love working with people and clients, and I'm very confident in my ability to lead, coach, and motivate!</p>
                 <br/><br/>
             </div>
             <i class="fas fa-info fa-6x icon aboutMeIcon" onClick="applyIconClickAnimation('#aboutMe')"></i>
@@ -80,7 +80,7 @@
                         <div class="progressBarOuter"><div class="progressBarInner" style="padding-left: 5%"></div></div>
                     </ul>
                 </p>
-                <p>Experience
+                <p>Professional Experience
                     <ul>
                         <li>Team Management</li>
                         <li>Artist Management & Development</li>
@@ -111,7 +111,7 @@
                     </ul>
                 </p>
                 <h1>passions.</h1>
-                <p>
+                <!-- <p>
                     <ul style="list-style-type: none; text-align: center; padding-right: 10%;">
                         <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Interior design *</li>
                         <br/>
@@ -119,9 +119,9 @@
                         <br/>
                         <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Something *</li>
                         <br/>
-                        <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Skiing *</li>
+                        <li style="position: relative; display: flex; justify-content: center;"><img src="images/wheee.png" />Skiing *</li>
                     </ul>
-                </p>
+                </p> -->
                 <br/><br/>
             </div> 
                 <i class="fas fa-paint-brush fa-5x icon skillsIcon" onClick="applyIconClickAnimation('#skills')"></i>
@@ -133,14 +133,14 @@
         <section id="background">
                 <div class="textContent">
                     <h1>background.</h1>   
-                    <p>Who doesn't want to spend their childhood in the countryside, <i>right?</i> Discovering an idyllic world with forest, lakes, animals, and so many fields to run through it would make Theresa May jealous. Although, growing up in an old English village did come with its fair share of challenges. I was forced to think outside the box from an early age and this is where I learned my love for creating. Sculptures, stories, songs, poetry, games... I was definitely one of those kids who could only give elaborate answers to simple questions. <sup>(I also wanted to grow up to be a train.)</sup></p>
+                    <p>Who doesn't want to spend their childhood in the countryside, <i>right?</i> Discovering an idyllic world with forest, lakes, animals, and so many fields to run through it would make Theresa May jealous. Although, growing up as a queer POC in an old English village did come with its fair share of challenges. I was forced to think outside the box from an early age and this is where I learned my love for creating. Sculptures, stories, songs, poetry, games... Though I have to admit I was a jack of all trades and master of very few! <sup>(I also wanted to grow up to be a train.)</sup></p>
                     <h1 style="padding-left: 20%;">goals.</h1>
-                    <p>Once I have jumped over the first hurdle and landed myself in a <b>tech related role</b> a lot of doors will open to me, but I won't know what's the behind them until I get close enough to take a look. So, as it stands I plan to be at a professional level within the <b>next few months</b>, and competent enough to lead teams <b>within the year</b>.</p>
+                    <p>Once I've made it over the first hurdle and landed a <b>tech related role</b> a lot of doors will open to me, but I won't know what's the behind any of them until I get close enough to take a look. Though I am very interested in Front End Development, UIs and Game Design! As it stands I plan to be at a professional level within the <b>next few months</b>, and competent enough to lead teams <b>within the next couple of years</b>.</p>
                     <h1 style="padding-right: 20%;">aspirations.</h1>
-                    <p>If you've travelled to the Philippines <sup><i>(and I highly recommend it &hearts;)</i></sup>, you'll have been greeted by the most wholesome customer service anywhere you step foot. Hotels, shops, restaurants & cafes will all be accommodating and <i>noticeably overstaffed</i>. Unfortunately, a lot of these employees will be either be:
+                    <p>If you've travelled to the Philippines <sup><i>(and I highly recommend it &hearts;)</i></sup>, you'll have been greeted by the most wholesome customer service anywhere you step foot. Hotels, shops, restaurants & cafes will all be accommodating, however also <i>noticeably overstaffed</i>. Unfortunately, a lot of these employees will be either be:
                         <br/> - <b>wanting an education</b> but <i>too poor to afford one</i>, or 
                         <br/>- <b>much more credited than myself, some with even Masters degrees</b>, but <i>unable to find employment due to the country's critical job shortage</i>.
-                        <br/><br/> Within the <b>next ten years</b>, if I can make the professional progress and meaningful connections it takes to employ and/or teach even a handful of people in the Philippines I would be ecstatic. And once I reach that point I will evaluate what my options are to <b>take it even further</b>.</p>
+                        <br/><br/> Within the <b>next ten years</b>, if I can make the professional progress and meaningful connections it takes to employ and/or teach even a handful of people in the Philippines I would be ecstatic. Once I reach that point I will evaluate what my options are to <b>take it even further</b>.</p>
                     <br/><br/>
                 </div>
                 <i class="fas fa-heartbeat fa-5x icon interestsIcon" onClick="applyIconClickAnimation('#background')"></i>
