--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
                     </ul>
                 </p>
                 <h1>passions.</h1>
+                <p>
+                    <ul style="list-style-type: none; text-align: center; padding-right: 10%;">
+                        <li style="position: relative; display: flex; justify-content: center;">Interior design</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;">Coaching</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;">Hiking</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;">Skiing</li>
+                    </ul>
+
+                </p>
                 <!-- <p>
                     <ul style="list-style-type: none; text-align: center; padding-right: 10%;">
                         <li style="position: relative; display: flex; justify-content: center;"><img src="images/HeaderBackground.jpg" />Interior design *</li>
