--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="footerIconContainer"><a href="mailto:c92macleod@gmail.com?subject=Hi%20tiarama,%20I%20want%20to%20get%20in%20touch!"><i class="fas fa-envelope fa-2x icon mailIcon"></i></a></div>
             <div class="footerIconContainer"><a href="https://www.linkedin.com/in/craig-macleod-1a2a091b8/" target="_blank"><i class="fab fa-linkedin-in fa-2x icon linkedinIcon"></i></a></div>
             <div class="footerIconContainer"><a href="https://www.freecodecamp.org/tiarama" target="_blank"><i class="fab fa-free-code-camp fa-2x icon freecodecampIcon"></i></a></div>
-            <div class="footerIconContainer"><a href="https://github.com/Tiarama" target="_blank"><i class="fab fa-github fa-2x icon githubIcon"></i></a></div>
+            <div class="footerIconContainer"><a href="https://github.com/Tiarama/tiarama.github.io" target="_blank"><i class="fab fa-github fa-2x icon githubIcon"></i></a></div>
             <div class="footerIconContainer"><a href="https://www.codewars.com/users/Tiarama" target="_blank"><i class="fab fa-galactic-republic fa-2x icon codewarsIcon"></i></a></div>
         </div>
     </footer>
