minor changes to text content

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                         <li style="position: relative; display: flex; justify-content: center;">Hiking</li>
                         <br/>
                         <li style="position: relative; display: flex; justify-content: center;">Skiing</li>
+                        <br/>
+                        <li style="position: relative; display: flex; justify-content: center;">Eating sushi. Lots and lots of sushi.</li>
+                        <br/>
                     </ul>
 
                 </p>
@@ -145,7 +148,7 @@
         <section id="background">
                 <div class="textContent">
                     <h1>background.</h1>   
-                    <p>Who doesn't want to spend their childhood in the countryside? Discovering an idyllic world of forests, lakes, animals, and so many fields to run through it would make Theresa May jealous. <i>Although</i>, growing up as a queer POC in an old English village <i>did</i> come with its fair share of challenges. I was forced to think <i>outside the box</i> from an early age and this is where I learned my love for <b>creating</b>. Sculptures, stories, songs, poetry, games... Though I have to admit I was probably a jack of all trades and master of few! <sup>I also wanted to grow up to be a train.</sup></p>
+                    <p>Who doesn't want to spend their childhood in the countryside? Discovering an idyllic world of forests, lakes, animals, and so many fields to run through it would make Theresa May jealous. Although, growing up as a queer POC in an old English village <i>did</i> come with its fair share of challenges. I was forced to think outside the box from an early age and this is where I learned my love for <b>creating</b>. Sculptures, stories, songs, poetry, games... Though I have to admit I was probably a jack of all trades and master of few. <sup>I also wanted to grow up to be a train.</sup></p>
                     <h1 style="padding-left: 20%;">goals.</h1>
                     <p>Once I've made it over the first hurdle and landed a tech related role a lot of doors will open to me, but I won't know what's the behind any of them until I get close enough to take a look. Though I am very interested in <b>Front End Development</b>, <b>UI</b>s and <b>Game Design</b>! As it stands I plan to be at a professional level within the next few months, and competent enough to lead teams within the next couple of years.</p>
                     <h1 style="padding-right: 20%;">aspirations.</h1>
